# communication-avoiding-parallel-sparse-dense-multiplication

./: CMakeLists.txt  README.md  main.cpp
include/: argparse.h  communicator.h  densematgen.h  matmul.h  matrix.h  parser.h  range.h  utils.h  zip.h
src/: argparse.cpp  communicator.cpp  densematgen.cpp  matmul.cpp  matrix.cpp  parser.cpp  utils.cpp
